# namada-sdk-tutorial

./: README.md  package-lock.json  package.json
app/: config-overrides.js  package-lock.json  package.json
app/src/: App.tsx
namada/: package.json
namada/shared/: package.json
namada/shared/lib/: Cargo.toml
namada/shared/lib/src/: lib.rs  query.rs  rpc_client.rs
namada/shared/src/: index.ts
namada/shared/src/shared/: package.json  shared.d.ts  shared.js  shared_bg.wasm  shared_bg.wasm.d.ts
