[package]
name = "shared"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dev = []

[dependencies]
async-trait = {version = "0.1.51"}
borsh = "1.0.0-alpha.4"
borsh-derive = "=1.0.0-alpha.4"
borsh-ext = {tag = "v1.0.0-alpha.4", git = "https://github.com/heliaxdev/borsh-ext"}
gloo-utils = { version = "0.1.5", features = ["serde"] }
js-sys = "0.3.60"
namada = { git = "https://github.com/anoma/namada", version = "0.27.0", default-features = false, features = ["namada-sdk"] }
rustls = "=0.21.7"
thiserror = "^1"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
